Authenticator firebase on swift, email password and more

--- a/Challenger/StoryBoards/Base.lproj/Cadastro.storyboard
+++ b/Challenger/StoryBoards/Base.lproj/Cadastro.storyboard
@@ -127,15 +127,15 @@
                                 <state key="normal" title="Button" image="SignGoogle"/>
                             </button>
                             <button opaque="NO" contentMode="scaleAspectFit" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dra-2d-6fp">
-                                <rect key="frame" x="106" y="122" width="163" height="109"/>
+                                <rect key="frame" x="106" y="103" width="163" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" image="camera1600"/>
                                 <connections>
                                     <action selector="imgSelected:" destination="Eez-Ik-KoA" eventType="touchUpInside" id="Da3-8a-nql"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="imgPerfil" translatesAutoresizingMaskIntoConstraints="NO" id="xZI-Vo-jkj">
-                                <rect key="frame" x="109" y="100" width="157" height="125"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="imgPerfil" translatesAutoresizingMaskIntoConstraints="NO" id="xZI-Vo-jkj">
+                                <rect key="frame" x="117" y="103" width="140" height="140"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
