--- a/Challenger/StoryBoards/Base.lproj/Cadastro.storyboard
+++ b/Challenger/StoryBoards/Base.lproj/Cadastro.storyboard
@@ -106,7 +106,7 @@
                 <viewControllerPlaceholder storyboardName="TabBar" id="LZj-qF-lBe" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xnf-wJ-B5z" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="838" y="987"/>
+            <point key="canvasLocation" x="22" y="657"/>
         </scene>
         <!--Sing Up View Controller-->
         <scene sceneID="qr6-Rs-m7P">
@@ -183,6 +183,6 @@
         <image name="loginGoogle" width="602" height="102"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="ZvD-G1-O5e"/>
+        <segue reference="ZYi-qd-T3n"/>
     </inferredMetricsTieBreakers>
 </document>
